# mas2graph_prerelease

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
scripts/: dejonge_qed_preprocessor.py  train_test_qed_bin.py  train_test_qed_graph.py  train_test_qed_set.py
src/mas2graph/: __about__.py  __init__.py
src/mas2graph/data/: __init__.py  binned_spectrum_encoder.py  graph_spectrum_encoder.py  mass_spec_graph_data_module.py  pair_data.py  spec_dataset.py  spectrum_encoder.py  utils.py
src/mas2graph/models/: __init__.py  gat_regressor.py  mlp.py
src/mas2graph/train_model/: convert_spectra_to_graph.py  data_generator.py
